--- a/src/app/Pages/manage-programs/manage-programs.component.html
+++ b/src/app/Pages/manage-programs/manage-programs.component.html
@@ -1,3 +1,38 @@
 <div class="row BtnsContainer">
   <button class="btn btn-primary AddNewProgramBtn" [routerLink]="['/pages/AddNewPrograms']">Add new Program</button>
 </div>
+
+
+
+<div class="row">      
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Program Number</th>
+          <th>Program Name</th>
+          <th>Status</th>
+          <th>Active Opportunities</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>H80</td>
+          <td>Primary Health Care</td>
+          <td>Active</td>
+          <td>3</td>
+        </tr>
+        <tr>
+            <td>H81</td>
+            <td>Primary Health Care</td>
+            <td>Inactive</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>H82</td>
+            <td>Primary Health Care</td>
+            <td>Active</td>
+            <td>6</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
