--- a/src/app/Pages/manage-programs/add-new-program/add-new-program.component.html
+++ b/src/app/Pages/manage-programs/add-new-program/add-new-program.component.html
@@ -1,1 +1,29 @@
-<p>add-new-program works!</p>
+
+
+<div class="row AddProgramContainer">
+    <div class="col-xs-12 heading"><h3>Add New Program</h3></div>
+    <div class="form-group col-md-6 col-sm-12 col-xs-12">
+        <label for="usr">Program Number:</label>
+        <input type="text" class="form-control" id="usr">
+    </div>
+    <div class="form-group col-md-6 col-sm-12 col-xs-12">
+        <label for="pwd">Program Name:</label>
+        <input type="password" class="form-control" id="pwd">
+    </div>
+    <div class="form-group col-md-6 col-sm-12 col-xs-12">
+        <label for="usr">Program Office:</label>
+        <input type="text" class="form-control" id="usr">
+    </div>
+    <div class="form-group col-md-6 col-sm-12 col-xs-12">
+        <label for="pwd">CFDA Number:</label>
+        <input type="password" class="form-control" id="pwd">
+    </div>
+
+</div>   
+
+
+<div class="row AddProgramBtnsContainer">
+    <button class="btn btn-primary" [routerLink]="['/pages/ManagePrograms']">Back To Programs list</button>
+    <button class="btn btn-primary">reset</button>
+    <button class="btn btn-primary">Add Program</button>
+</div>
