--- a/src/app/Pages/navbar/navbar.component.html
+++ b/src/app/Pages/navbar/navbar.component.html
@@ -11,8 +11,8 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a [routerLink]="['/pages/Dashboard']">Home</a></li>
-          <li><a [routerLink]="['/pages/ManagePrograms']">Manage Programs</a></li>
+          <li><a [routerLink]="['/pages/Dashboard']">Home</a></li>
+          <li class="active"><a [routerLink]="['/pages/ManagePrograms']">Manage Programs</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a [routerLink]="['/Login']"><span class="glyphicon glyphicon-user"></span> Log Out</a></li>
